# lesser-cam

./: Cargo.toml  Investigate pyvirtualcam Abort.md  Makefile  README.md  buf.gen.yaml  build.rs  build.ts  bun.lockb  elm-watch.json  elm.json  index.html  makefile  package-lock.json  package.json  vite.config.ts
.VSCodeCounter/2026-01-01_13-14-33/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
css/: main.css
elm/: elm.json  index.html
elm/elm-stuff/0.19.1/: Camera.elmi  Camera.elmo  CameraHandler.elmi  CameraHandler.elmo  GrpcHandler.elmi  GrpcHandler.elmo  Main.elmi  Main.elmo  Proto-Camera-CameraService.elmi  Proto-Camera-CameraService.elmo  Proto-Camera-Internals_.elmi  Proto-Camera-Internals_.elmo  Proto-Camera.elmi  Proto-Camera.elmo  WebSocket.elmi  WebSocket.elmo
elm/src/: Camera.elm  CameraHandler.elm  Canvas.elm  GrpcHandler.elm  Main.elm  WebSocket.elm
elm/src/Proto/: Camera.elm
elm/src/Proto/Camera/: CameraService.elm  Internals_.elm
js/: canvas.js  main.js  runtime.js  web_socket.js
proto/: camera.proto
public/: elm.js  output.css
public/assets/: index-B-JtoQk5.css
python/: main.py
src/: Main.elm  app.rs  camera.rs  lib.rs  main.rs  python_utils.rs  server_state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: camera.proto
src-tauri/src/: camera.py  camera.rs  lib.rs  main.rs  python_ffi.rs
src/Proto/Camera/: Internals_.elm
src/elm/: elm-watch.json  elm.json
src/elm/elm-stuff/0.19.1/: Main.elmi  Main.elmo  Proto-Camera-CameraService.elmi  Proto-Camera-CameraService.elmo  Proto-Camera-Internals_.elmi  Proto-Camera-Internals_.elmo  Proto-Camera.elmi  Proto-Camera.elmo
src/elm/elm-stuff/elm-watch/: 0.js  stuff.json
src/elm/src/: Main.elm
src/elm/src/Proto/: Camera.elm
src/elm/src/Proto/Camera/: CameraService.elm  Internals_.elm
src/js/: main.ts  webrtc.js
src/ts/: camera_connect.ts  camera_pb.ts  main.ts  sync_view.ts
