[package]
name = "lesser-cam"
version = "0.1.0"
edition = "2024"

[dependencies]
web-view = { git = "https://github.com/huytd/web-view" }
axum = { version = "0.6", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencv = "0.97.2"

[dependencies.pyo3]
version = "0.27.1"
# this is necessary to automatically initialize the Python interpreter
features = ["auto-initialize"]