[package]
name = "tauri-elm-app"
version = "0.1.0"
edition = "2024"


[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = "0.14.0"

prost = "0.14.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tonic = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["full"] }
tonic-prost = "0.14.2"
rustc-hash = "2.1.1"
crossbeam-channel = "0.5.15"


[dependencies.pyo3]
version = "0.27.1"
# this is necessary to automatically initialize the Python interpreter
features = ["auto-initialize"]