[package]
name = "tauri-elm-app"
version = "0.1.0"
description = "A Tauri + Elm app"
authors = ["you"]
license = "ISC"
repository = "https://github.com/Airsequel/tauri-elm-app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tonic-build = "0.9.2"
tonic-prost-build = "*"


[dependencies]
tauri = { version = "1.5", features = [
  "shell-open",
  # "devtools", # Uncomment to enable inspector
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic-reflection = "0.9.2"
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic-web = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
http = "1.1.0"
tonic-health = "0.12.3"

[features]
# This feature is used for production builds
# or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

