[package]
name = "tauri-elm-app"
version = "0.1.0"
authors = ["you"]
license = "ISC"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"


[dependencies]
tauri = { version = "1.5", features = [
  "shell-open",
  # "devtools", # Uncomment to enable inspector
] }
prost = "0.14.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tonic = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["full"] }
tonic-prost = "0.14.2"
opencv = "0.97.2"

[features]
# This feature is used for production builds
# or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dependencies.pyo3]
version = "0.27.1"
# this is necessary to automatically initialize the Python interpreter
features = ["auto-initialize"]
