[package]
name = "less-i-cam"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "less_i_cam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.0.0"
webrtc = "0.14.0"

prost = "0.14.1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "rt", "macros"] }
tonic = "0.14.2"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["full"] }
tonic-prost = "0.14.2"
opencv = "0.97.2"
ws = "0.9.2"


[dependencies.pyo3]
version = "0.27.1"
# this is necessary to automatically initialize the Python interpreter
features = ["auto-initialize"]
